Name:               DisEvSim
Version:            0.2
Synopsis:           Discrete Event Simulator
Description:        A simple Discrete Event Simulation framework.
License:            GPL
License-file:       LICENSE
Author:             Drew Haven
Maintainer:         Drew Haven <drew.haven@gmail.com>

Build-type:         Simple
Cabal-version:      >= 1.2

-- library
--     Exposed-modules:    DisEvSim,
--                         DisEvSim.Debug
--     Other-modules:      DisEvSim.Common,
--                         DisEvSim.EventQueue,
--     Build-depends:      base >= 4,
--                         mtl,
--                         dlist,
--                         containers

library
    Exposed-modules:    DisEvSim
    Other-modules:      DisEvSim.Common
                        DisEvSim.EventQueue
                        DisEvSim.HandlerMap
                        DisEvSim.Sim
    Build-depends:      base >= 4,
                        containers,
                        data-default == 0.5.*,
                        lens,
                        mtl,
                        transformers
    Ghc-options:        -Wall -Werror
    extensions:         DeriveDataTypeable,
                        GADTs,
                        GeneralizedNewtypeDeriving

Test-suite event-queue-properties
    type:               exitcode-stdio-1.0
    main-is:            DisEvSim/EventQueueProperties.hs
    build-depends:      base >=4,
                        QuickCheck == 2.6.*
    Ghc-options:        -Wall -Werror -fno-warn-orphans
    extensions:         DeriveDataTypeable,
                        GADTs,
                        GeneralizedNewtypeDeriving

Test-suite handlermap-properties
    type:               exitcode-stdio-1.0
    main-is:            DisEvSim/HandlerMapProperties.hs
    build-depends:      base >=4,
                        QuickCheck == 2.6.*
    Ghc-options:        -Wall -Werror -fno-warn-orphans
    extensions:         DeriveDataTypeable,
                        GADTs,
                        GeneralizedNewtypeDeriving

Test-suite sim-properties
    type:               exitcode-stdio-1.0
    main-is:            DisEvSim/SimProperties.hs
    build-depends:      base >=4,
                        QuickCheck == 2.6.*
    Ghc-options:        -Wall -Werror -fno-warn-orphans
    extensions:         DeriveDataTypeable,
                        GADTs,
                        GeneralizedNewtypeDeriving

Test-suite counter-test
    type:               exitcode-stdio-1.0
    main-is:            Test/Counter.hs
    build-depends:      base >=4,
                        HUnit
    Ghc-options:        -Wall -Werror
    extensions:         DeriveDataTypeable,
                        GADTs,
                        GeneralizedNewtypeDeriving

